2021-03-30  orbea  <orbea@riseup.net>

	[build] Add an `install` target for binaries and man pages.

	* Makefile (MANPAGES): New variable.
	(install) <unix>: New target.

2021-03-26  Werner Lemberg  <wl@gnu.org>

	* man/ftbench.1, man/ftview.1: Improve line breaking.

2021-03-24  orbea  <orbea@riseup.net>

	* Makefile, mac/Makefile (LINK_CMD): Don't hard-code `libtool`.

2021-03-24  orbea  <orbea@riseup.net>

	[graph] Fix build with `slibtool`.

	* graph/rules.mk (GRAPH_LIB): Handle the case specially where
	`LIBTOOL` is defined.
	(COMPILE_GRAPH_LIB) <LIBTOOL>: Enable use of `dlopen`.

2021-03-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftbench] Add Windows performance timers.

	* src/ftbench.c (get_time) [_WIN32]: Add QPC, GPT, and QPCT timing
	tools.
	(main) [_WIN32]: Initialize interval for QPC.

2021-02-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Gray multiplication tricks.

	* graph/x11/grx11.c (gr_x11_convert_gray_to_rgb{555,565,0888,8880}):
	Combine multiple shifts into multiplication.

2021-02-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdiff] Make it agnostic to display mode.

	* src/ftdiff.c (main): Let the driver choose the mode.
	(adisplay_init): Call `grFindColor' to set colors.
	(adisplay_clear): Call `grFillRect' to clear display.

2021-02-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblany.h, graph/gblblit.c: Multiply by 0x010101U.

2021-02-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	PNG writing routines using GDI+.

	* src/ftpngout.c (FTDemo_Display_Print) [_WIN32]: Implement it.

2021-02-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Split out PNG writing routines.

	* src/ftcommon.c (FTDemo_Display_Print): Move from here...
	* src/ftpngout.c (FTDemo_Display_Print): ... to here.
	* Makefile: Updated accordingly.

2021-02-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_String_Draw): Control pen position better.

2021-02-18  Alexei Podtelezhnikov  <apodtele@gmail.com>
